# aidaptiv-bench

./: .gitignore  DEPLOYMENT.md  PITFALLS.md  README.md  benchmark.py  benchmark_backup.py  benchmark_explanation.md  brainstorming.md  config.yaml  dashboard.py  debug_powermetrics.py  discovery_runtime.py  discovery_telemetry.py  limit_runner.sh  main.py  plotter.py  pyproject.toml  runner.py  scenarios.py  setup_llama.sh  sidecar.py  start.sh  start_llama_server.sh  telemetry.py
aidaptiv_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: hardware.py  metrics.py  schemas.py
config_history/: config_20260118_150829.yaml  config_20260118_151130.yaml  config_20260118_151533.yaml  config_20260118_230416.yaml  config_20260118_232029.yaml  config_20260118_233459.yaml  config_20260118_234544.yaml  config_20260118_234624.yaml  config_20260118_235721.yaml  config_20260119_000531.yaml  config_20260119_001552.yaml  config_20260119_003553.yaml  config_20260119_011317.yaml  config_20260119_025522.yaml  config_20260119_030835.yaml  config_20260119_032641.yaml  config_20260119_032721.yaml  config_20260119_034635.yaml  config_20260119_035207.yaml  config_20260119_042409.yaml  config_20260119_043416.yaml  config_20260119_043804.yaml  config_20260119_115556.yaml  config_20260119_120201.yaml  config_20260119_121645.yaml  config_20260119_125336.yaml  config_20260119_134256.yaml  config_20260119_134445.yaml  config_20260119_135243.yaml
configs/: s1_demo.yaml
scenarios/: base.py  s1_oom_finder.py  s2_latency_curve.py  s3_drift.py  s4_rag.py  s5_concurrency.py
(+136 files in other folders)
