[project]
name = "aidaptiv-bench"
version = "0.1.0"
description = "Phison aiDAPTIV Benchmarking Tool"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "pynvml>=11.5.0",
    # amdsmi usually requires specific system install, but we list it for completeness if available via pip
    # "amdsmi", 
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
packages = ["backend"]
